# ohtuprojekti-2022

./: .coveragerc  .env  .env.test  .gitignore  .pylintrc  README.md  pyproject.toml  pytest.ini  reference_type_config.json  tasks.py
.github/workflows/: blank.yml
docs/: instructions.md
src/: build.py  command.py  config.py  console_io.py  index.py  initialize_database.py
src/commands/: __init__.py  add.py  delete.py  edit.py  help.py  list.py  print.py  search.py  translator.py
src/entities/: __init__.py  reference.py
src/libraries/: AddLibrary.py  DeleteLibrary.py  EditLibrary.py  ListLibrary.py  SearchLibrary.py  TranslatorLibrary.py
src/repositories/: __init__.py  author_repository.py  reference_author_repository.py  reference_repository.py  reference_tag_repository.py  tag_repository.py
src/services/: __init__.py  reference_service.py
src/tests/: add.robot  add_test.py  conftest.py  delete.robot  delete_test.py  edit.robot  list.robot  print_test.py  search.robot  translator.robot  translator_test.py
src/tests/commands/: add_test.py  delete_test.py  edit_test.py  list_test.py  print_test.py  search_test.py  translator_test.py
src/tests/repositories/: author_repository_test.py  reference_author_repository_test.py  reference_repository_test.py  reference_tag_repository_test.py  tag_repository_test.py
src/tests/services/: reference_service_test.py
