[tool.poetry]
name = "ohtuprojekti-2022"
version = "0.1.0"
description = "miniprojekti"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ohtuprojekti_2022"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.21.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pylint = "^2.15.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
