[tool.poetry]
name = "ohtuprojekti-2022"
version = "0.1.0"
description = "miniprojekti"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.21.0"
invoke = "^1.7.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pylint = "^2.15.6"
robotframework = "^6.0.1"
coverage = "^6.5.0"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
